# ondemand-python

./: CHANGELOG.md  README.md  pyproject.toml
docs/: telemetry-approaches.md
ondemand/: __init__.py
ondemand/screen_recorder/: __init__.py  browser_manager.py  screen_recorder.py
ondemand/shared/: __init__.py  approval.py  artifacts.py  cli.py  logging.py  r2_storage.py
ondemand/supervisor/: __init__.py  connector.py  default_instances.py  event_bus.py  main_context.py  manifest.py  step_context.py  step_decorator_factory.py
ondemand/supervisor/reporting/: __init__.py  record.py  record_report.py  report.py  report_builder.py  status.py  step_report.py  timed_report.py  timer.py
ondemand/supervisor/streaming/: __init__.py  action.py  payloads.py  streamer.py
ondemand/utils/: json.py
ondemand_ai.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
