[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ondemand-ai"
version = "1.0.4"
description = "Automation agent toolkit for the Ondemand platform"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "Apache-2.0"}
authors = [
    {name = "Ondemand AI", email = "dev@ondemand-ai.com.br"}
]
keywords = ["rpa", "automation", "supervisor", "ondemand"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "License :: OSI Approved :: Apache Software License",
    "Topic :: Software Development :: Libraries",
]

dependencies = [
    "t-vault-manager>=1.0.3",
    "requests>=2.28.0",
    "httpx>=0.25.0",
    "pyyaml>=5.4.0",
    "pydantic>=2.0.0",
    "boto3>=1.28.0",
]

[project.urls]
Homepage = "https://ondemand-ai.com.br"
Repository = "https://github.com/Ondemand-AI/ondemand-python"
Changelog = "https://github.com/Ondemand-AI/ondemand-python/blob/main/CHANGELOG.md"

[tool.setuptools.packages.find]
include = ["ondemand*"]
